# stateEstimation

./: .gitmodules  CMakeLists.txt  README.md
doc/: test_altitude.md
include/estimators/: alittude.h  altitude.h  attitude.h  attitude_full.h  heading.h  madgwick.h  unified.h
include/filters/: complementary.h  kalman_full.h  vector_ops.h
include/filters/kalman/: kalman_altitude.h  kalman_attitude.h  kalman_attitude_full.h
include/types/: state_types.h
src/estimators/: .attitude.c.swp  altitude.c  attitude.c  attitude_full.c  heading.c  madwick.c
src/filters/: kalman_full.c
src/filters/kalman/: kalman_attitude_full.c
test/: .test_attitude_fn.c.swp  CMakeLists.txt  test_altitude_verbose.c  test_attitude.c  test_attitude_fn.c  test_kalman.c
test/altitude/: test_altitude.c
test/py_scripts/: altitude_data_gen.py  data_gen.py
test/scripts/: imu_data.csv
test/test_cases/attitude/: test_attitude_fn.c  test_kalman.c
test/test_cases/heading/: test_heading.c  test_heading_tilts.c
test/utils/: test_helpers.c  test_helpers.h
